--- a/images.html
+++ b/images.html
@@ -25,7 +25,13 @@ Description : A simple HTML file .
     <h2 > JPEG Image </h2>
         <p > This is a standard JPEG image : </p >
         <img src ="example.jpg" alt =" Example JPEG Image " width="500" >
-    
+    <h2>GIF Image</h2>
+            <p>This is a gif image</p>
+            <img src="example.gif" alt="Example GIF image" width ="300">
+    <h2>SVG image</h2>
+            <p>This is a svg image</p>
+            <img src="example.svg" alt="Example svg image" width="200">
+
 </body>
 </html>
 
