--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@ Description : A simple HTML website with different tags.
 
     <nav>
         <ul>
-            <li><!--Add a hyperlink to the News page.--></li>
-            <li><!--Add a hyperlink to the Images page.--></li>
+            <li><a href="images.html">images.html</a></li>
+            <li><a href="news.html">news.html</a></li>
         </ul>
     </nav>
 
 </body>
 </html>
+<br><a href="./">Back to Home</a>
