--- a/news.html
+++ b/news.html
@@ -12,6 +12,13 @@ Description : A simple HTML file.
 <head>
     <title>Comprehensive HTML Page</title>
 	<!--Copy and paste remaining tags of the head section from images.html file.-->
+    <title > Image Demonstration </title >
+        <title > Image Demonstration </title >
+        <meta charset =" UTF -8" >
+        <meta name =" description " content =" An HTML example with img tags" >
+        <meta name =" keywords " content =" HTML , Web Development , Example ,img ">
+        <meta name =" author " content =" Tchaka Gashagaza Gisa " >
+        <link rel =" shortcut icon " href =" favicon.ico " type =" image /x - icon" >
 </head>
 <body>
 
@@ -31,7 +38,7 @@ Description : A simple HTML file.
         <article>
             <h2>Article Title</h2>
 			
-			<p>This is a paragraph in an article section. It demonstrates text formatting, like bold, italic, and marked text.</p>
+			<p>This is a paragraph in an article section. It demonstrates text formatting, like <b>bold</b>, <i>italic</i>, and <mark>marked</mark> text.</p>
 			<!-- To emphasize specific words in the paragraph, apply appropriate HTML tags: 
 			<strong> or <b> for bold text, 
 			<em> or <i> for italic text, and
@@ -53,12 +60,22 @@ Description : A simple HTML file.
             <li>First item</li>
             <li>Second item</li>
 			<!--Make a sub-ordered list here-->
+            <ol>
+            <li>Second-First Item</li>
+            <li>Second-Second Item</li>
+            <li>Second-Third Item</li>
+            </ol>
             <li>Third item</li>
         </ol>
         <p>Unordered List:</p>
         <ul>
             <li>Bullet item</li>
 			<!--Make a sub-unordered list here-->
+            <ul>
+                <li>First-Bullet item</li>
+                <li>Second-Another Bullet item</li>
+                <li>Third-Yet Another Bullet item</li>
+            </ul>
             <li>Another bullet item</li>
             <li>Yet another bullet item</li>
         </ul>
@@ -74,7 +91,7 @@ Description : A simple HTML file.
             <dt>HTML</dt>
             <dd>Hypertext Markup Language.</dd>
 			<dt>CSS</dt>
-            <dd><!--Add CSS definition here--></dd>
+            <dd>Cascading Style Sheets</dd>
         </dl>
 		
         
@@ -104,8 +121,8 @@ Description : A simple HTML file.
 			<tfoot>
 				<tr>
 					<td>Total</td>
-					<td><!--Put column total here--></td>
-					<td><!--Put column total here--></td>
+					<td>$3800</td>
+					<td>$2700</td>
 				</tr>
 			</tfoot>
         </table>
@@ -116,9 +133,10 @@ Description : A simple HTML file.
     </section>
 
     <footer>
-        <p>Footer content, like contact info or copyrights.</p>
-		<!--Comment out the above p tag and add a new p tag under this comment.
-			The new p tag must contain {Copy right + your names}.-->	
+        <!--<p>Footer content, like contact info or copyrights.</p>
+		Comment out the above p tag and add a new p tag under this comment.
+			The new p tag must contain {Copy right + your names}.-->
+        <p>Copy right Tchaka Gashagaza Gisa</p>    	
     </footer>
 </body>
 </html>
