added back to home link

--- a/news.html
+++ b/news.html
@@ -7,6 +7,7 @@ Submission  : May 21, 2030
 Description : A simple HTML file.
 =========================================================
 -->
+<br><a href="index.html">Back to Home</a>
 <!DOCTYPE html>
 <html>
 <head>
@@ -129,7 +130,7 @@ Description : A simple HTML file.
 		
 		<h3>Images:</h3>
         <p>Adding an image:</p>
-        <img src="example.jpg" alt="Example Image"> <!--Fix addressing issue-->
+        <img src="images/example.jpg" alt="Example Image"> <!--Fix addressing issue-->
     </section>
 
     <footer>
@@ -140,3 +141,4 @@ Description : A simple HTML file.
     </footer>
 </body>
 </html>
+<br><a href="./">Back to Home</a>
