--- a/images.html
+++ b/images.html
@@ -8,6 +8,7 @@ Submission : May 21 , 2030
 Description : A simple HTML file .
 = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
 -->
+<br><a href="index.html">Back to Home</a>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,14 +25,15 @@ Description : A simple HTML file .
     <h1>Image format Demonstration</h1>
     <h2 > JPEG Image </h2>
         <p > This is a standard JPEG image : </p >
-        <img src ="example.jpg" alt =" Example JPEG Image " width="500" >
+        <img src ="images/example.jpg" alt =" Example JPEG Image " width="500" >
     <h2>GIF Image</h2>
             <p>This is a gif image</p>
-            <img src="example.gif" alt="Example GIF image" width ="300">
+            <img src="images/example.gif" alt="Example GIF image" width ="300">
     <h2>SVG image</h2>
             <p>This is a svg image</p>
-            <img src="example.svg" alt="Example svg image" width="200">
+            <img src="images/example.svg" alt="Example svg image" width="200">
 
 </body>
 </html>
+<br><a href="./">Back to Home</a>
 
